Perma Beta TEST-UNEXPECTED-FAIL | devtools/client/inspector/animation/test/browser_animation_pseudo-element.js | Text content of animation target[3] should be undefined - Got div.div-marker, expected ::marker when Gecko 75 merges to Beta on 2020-03-09
Categories
(DevTools :: Inspector: Animations, defect, P2)
Tracking
(firefox-esr68 unaffected, firefox73 unaffected, firefox74 unaffected, firefox75+ verified)
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox73 | --- | unaffected |
firefox74 | --- | unaffected |
firefox75 | + | verified |
People
(Reporter: malexandru, Assigned: boris)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
Central as Beta Simulation:
https://treeherder.mozilla.org/#/jobs?repo=try&selectedJob=291232436&resultStatus=testfailed%2Cbusted%2Cexception%2Crunnable&revision=686cd3312492ebab1a98d0a807714fe47da96884&searchStr=%28dt
Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=291232436&repo=try&lineNumber=172678
[task 2020-03-02T10:59:47.964Z] 10:59:47 INFO - TEST-PASS | devtools/client/inspector/animation/test/browser_animation_pseudo-element.js | The animation name should be div-after -
[task 2020-03-02T10:59:47.966Z] 10:59:47 INFO - Checking pseudo element for ::marker
[task 2020-03-02T10:59:47.967Z] 10:59:47 INFO - Checking text content of animation target
[task 2020-03-02T10:59:47.968Z] 10:59:47 INFO - Buffered messages finished
[task 2020-03-02T10:59:47.969Z] 10:59:47 INFO - TEST-UNEXPECTED-FAIL | devtools/client/inspector/animation/test/browser_animation_pseudo-element.js | Text content of animation target[3] should be undefined - Got div.div-marker, expected ::marker
[task 2020-03-02T10:59:47.970Z] 10:59:47 INFO - Stack trace:
[task 2020-03-02T10:59:47.971Z] 10:59:47 INFO - chrome://mochikit/content/browser-test.js:test_is:1320
[task 2020-03-02T10:59:47.972Z] 10:59:47 INFO - chrome://mochitests/content/browser/devtools/client/inspector/animation/test/browser_animation_pseudo-element.js:null:58
[task 2020-03-02T10:59:47.972Z] 10:59:47 INFO - Checking text content of animation name
[task 2020-03-02T10:59:47.975Z] 10:59:47 INFO - TEST-PASS | devtools/client/inspector/animation/test/browser_animation_pseudo-element.js | The animation name should be div-marker -
[task 2020-03-02T10:59:47.976Z] 10:59:47 INFO - Checking whether node is selected correctly when click on the first inspector icon on Reps component
[task 2020-03-02T10:59:47.977Z] 10:59:47 INFO - Click on a target node in animation target component[0]
[task 2020-03-02T10:59:48.732Z] 10:59:48 INFO - GECKO(1774) | console.log: "[DISPATCH] action type:" "UPDATE_ANIMATIONS"
[task 2020-03-02T10:59:49.394Z] 10:59:49 INFO - GECKO(1774) | [Child 1960: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 4 (0x7f151b681400) [pid = 1960] [serial = 138] [outer = (nil)] [url = about:blank]
[task 2020-03-02T10:59:49.614Z] 10:59:49 INFO - GECKO(1774) | [Child 1960: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 3 (0x7f1537d93350) [pid = 1960] [serial = 134] [outer = (nil)] [url = http://example.com/browser/devtools/client/inspector/animation/test/doc_custom_playback_rate.html]
[task 2020-03-02T10:59:50.845Z] 10:59:50 INFO - Checking count of animation item
[task 2020-03-02T10:59:50.846Z] 10:59:50 INFO - TEST-PASS | devtools/client/inspector/animation/test/browser_animation_pseudo-element.js | Count of animation item should be 1 -
[task 2020-03-02T10:59:50.846Z] 10:59:50 INFO - Checking the animation name label
[task 2020-03-02T10:59:50.847Z] 10:59:50 INFO - TEST-PASS | devtools/client/inspector/animation/test/browser_animation_pseudo-element.js | The animation name should be body -
[task 2020-03-02T10:59:50.847Z] 10:59:50 INFO - Checking the keyframes graph path segments
[task 2020-03-02T10:59:50.848Z] 10:59:50 INFO - TEST-PASS | devtools/client/inspector/animation/test/browser_animation_pseudo-element.js | The tested element should have pathSegList -
[task 2020-03-02T10:59:50.848Z] 10:59:50 INFO - TEST-PASS | devtools/client/inspector/animation/test/browser_animation_pseudo-element.js | The path segment of x 0, y 0 should be passing through -
[task 2020-03-02T10:59:50.850Z] 10:59:50 INFO - TEST-PASS | devtools/client/inspector/animation/test/browser_animation_pseudo-element.js | The path segment of x 1000, y 100 should be passing through -
[task 2020-03-02T10:59:50.851Z] 10:59:50 INFO - TEST-PASS | devtools/client/inspector/animation/test/browser_animation_pseudo-element.js | The last segment should be close path -
[task 2020-03-02T10:59:50.853Z] 10:59:50 INFO - Select <body> again to reset the animation list
[task 2020-03-02T10:59:50.853Z] 10:59:50 INFO - Selecting the node for 'body'
[task 2020-03-02T10:59:52.657Z] 10:59:52 INFO - GECKO(1774) | console.log: "[DISPATCH] action type:" "UPDATE_ANIMATIONS"
[task 2020-03-02T10:59:52.796Z] 10:59:52 INFO - GECKO(1774) | [Child 2015: Main Thread]: I/DocShellAndDOMWindowLeak --DOCSHELL 0x7f75a0a57800 == 1 [pid = 2015] [id = {e5ce598c-1ec4-43ec-bdd7-02a4f698a94f}] [url = about:blank]
[task 2020-03-02T10:59:52.998Z] 10:59:52 INFO - GECKO(1774) | [Child 2015: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 6 (0x7f75bce93350) [pid = 2015] [serial = 129] [outer = (nil)] [url = about:blank]
[task 2020-03-02T10:59:52.999Z] 10:59:52 INFO - GECKO(1774) | [Child 2015: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 5 (0x7f75bce93520) [pid = 2015] [serial = 126] [outer = (nil)] [url = http://example.com/browser/devtools/client/inspector/animation/test/doc_custom_playback_rate.html]
[task 2020-03-02T10:59:53.741Z] 10:59:53 INFO - GECKO(1774) | [Child 1960: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 2 (0x7f151bec3800) [pid = 1960] [serial = 136] [outer = (nil)] [url = http://example.com/browser/devtools/client/inspector/animation/test/doc_custom_playback_rate.html]
[task 2020-03-02T10:59:54.694Z] 10:59:54 INFO - Checking whether node is selected correctly when click on the second inspector icon on Reps component
[task 2020-03-02T10:59:54.695Z] 10:59:54 INFO - Click on a target node in animation target component[1]
[task 2020-03-02T10:59:55.445Z] 10:59:55 INFO - GECKO(1774) | console.log: "[DISPATCH] action type:" "UPDATE_ANIMATIONS"
[task 2020-03-02T10:59:56.633Z] 10:59:56 INFO - Checking count of animation item
[task 2020-03-02T10:59:56.633Z] 10:59:56 INFO - TEST-PASS | devtools/client/inspector/animation/test/browser_animation_pseudo-element.js | Count of animation item should be 1 -
Daisuke, could this be caused by the changes in Bug 1615473?
Updated•5 years ago
|
Updated•5 years ago
|
Comment 1•5 years ago
|
||
Comment 2•5 years ago
|
||
Hi Boris!
It seems we need to turn on dom.animations-api.compositing.enabled
in order to run animation on ::marker
element in beta and higher.
The behavior is expected??
(I requested a review to you with I assumed this is correct, though)
Updated•5 years ago
|
Updated•5 years ago
|
Assignee | ||
Comment 3•5 years ago
|
||
Besides, we add the pref setup in the webidl, so if we turn it off,
iterationComposite and composite will always be the default values.
Assignee | ||
Comment 4•5 years ago
•
|
||
I verified this patch by turning off dom.animations-api.compositing.enabled. Looks OK on my mac locally.
Updated•5 years ago
|
Updated•5 years ago
|
Reporter | ||
Comment 6•5 years ago
|
||
bugherder |
Comment 7•5 years ago
|
||
Updated•5 years ago
|
Description
•