Bug 1619276 - Fix the order of the setting of Keyframe options. r=smaug,birtles

Besides, we add the pref setup in the webidl, so if we turn it off,
iterationComposite and composite will always be the default values.

Differential Revision: https://phabricator.services.mozilla.com/D65437